# perapera-anime-maker901

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
docs/: FILE_FORMAT.md  ROADMAP.md  SPEC.md  WORKPLAN.md
src/: CMakeLists.txt  main.cpp
src/core/: Bitmap.cpp  Bitmap.h  BoxBlur.h  BrushEngine.cpp  BrushEngine.h  CMakeLists.txt  Cel.cpp  Cel.h  Command.h  CommandStack.cpp  CommandStack.h  Compositor.cpp  Compositor.h  Cut.cpp  Cut.h  Effect.cpp  Effect.h  EffectProcessor.cpp  EffectProcessor.h  ExposureSheetCommand.cpp  ExposureSheetCommand.h  FillTool.cpp  FillTool.h  Frame.h  LassoFillTool.cpp  LassoFillTool.h  Layer.cpp  Layer.h  Multiplane.cpp  Multiplane.h  PaintLayer.h  Parallel.h  Previz.h  Project.cpp  Project.h  ProjectIO.cpp  ProjectIO.h  Scene.cpp  Scene.h  StrokeCommand.cpp  (+1 more)
src/previz/: GltfLoader.cpp  GltfLoader.h  PrevizSheetPanel.cpp  PrevizSheetPanel.h  PrevizViewport.cpp  PrevizViewport.h  PrevizWindow.cpp  PrevizWindow.h  StlLoader.cpp  StlLoader.h
src/render/: GLCanvas.cpp  GLCanvas.h
src/ui/: CameraPanel.cpp  CameraPanel.h  CanvasSizeDialog.cpp  CanvasSizeDialog.h  CelPanel.cpp  CelPanel.h  CelSizeDialog.cpp  CelSizeDialog.h  DockPanelColumn.h  DockScrollArea.h  EditWindow.cpp  EditWindow.h  EffectPanel.cpp  EffectPanel.h  ExportDialog.cpp  ExportDialog.h  FilmCurveWidget.cpp  FilmCurveWidget.h  FloatingCanvasWindow.cpp  FloatingCanvasWindow.h  FramePanel.cpp  FramePanel.h  LayerPanel.cpp  LayerPanel.h  MainWindow.cpp  MainWindow.h  NewCutDialog.cpp  NewCutDialog.h  NewProjectDialog.cpp  NewProjectDialog.h  PaintLayerUtils.cpp  PaintLayerUtils.h  PalettePanel.cpp  PalettePanel.h  ProjectManagerWindow.cpp  ProjectManagerWindow.h  ReferencePanel.cpp  ReferencePanel.h  RetroArrows.qrc  RetroTheme.cpp  (+13 more)
tests/: BrushEngineTests.cpp  CMakeLists.txt  CommandStackTests.cpp  CompositorTests.cpp  CoreModelTests.cpp  EffectTests.cpp  ExposureSheetCommandTests.cpp  FillToolTests.cpp  LassoFillToolTests.cpp  MultiplaneTests.cpp  PrevizMeshTests.cpp  ProjectIOTests.cpp  StrokeCommandTests.cpp
tools/: package_windows_portable.ps1
